# ros2_object_spawner_detector

./: README.md
ros2_eval_task/: CMakeLists.txt  README.md  package.xml
ros2_eval_task/include/ros2_eval_task/: gazebo_utils_client.hpp  model_spawner_node.hpp
ros2_eval_task/src/: gazebo_utils_client.cpp  model_spawner_node.cpp  spawn_test_node.cpp
ros2_eval_task/worlds/: my_world.sdf
