<?xml version="1.0"?>
<package format="3">
  <name>ros2_eval_task</name>
  <version>0.0.1</version>
  <description>Evaluation task package (C++ for Gazebo + camera)</description>
  <license>MIT</license>

  <maintainer email="baselamr52@gmail.com">Basel Amr</maintainer>
  <author email="baselamr52@gmail.com">Basel Amr</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & run dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>

  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
